syntax = "proto3";
package spec;


message MapsMessage {
    map<string, string> str_str_field = 1;
    map<string, int32> str_int32_field = 2;
    map<string, int64> str_int64_field = 3;
    map<string, bool> str_bool_field = 4;
    map<string, bytes> str_bytes_field = 5;
    map<int32, string> int32_str_field = 6;
    map<int64, string> int64_str_field = 7;
    map<bool, string> bool_str_field = 8;
    map<string, MapsMessage> str_msg_field = 9;
    map<int32, MapsMessage> int32_msg_field = 10;
    map<int64, MapsMessage> int64_msg_field = 11;
    map<string, MapsEnum> str_enu_field = 12;
    map<int32, MapsEnum> int32_enu_field = 13;
    map<int64, MapsEnum> int64_enu_field = 14;
}

enum MapsEnum {
    MAPS_ENUM_ANY = 0;
    MAPS_ENUM_YES = 1;
    MAPS_ENUM_NO = 2;
}
